# docs/openapi.json
@@ -1210,6 +1210,71 @@
                     "minimum": 1,
                     "maximum": 20
                   },
+                  "logoUrl": {
+                    "anyOf": [
+                      {
+                        "type": "string"
+                      },
+                      {
+                        "type": "null"
+                      }
+                    ]
+                  },
+                  "bannerUrl": {
+                    "anyOf": [
+                      {
+                        "type": "string"
+                      },
+                      {
+                        "type": "null"
+                      }
+                    ]
+                  },
+                  "registrationFields": {
+                    "type": "object",
+                    "properties": {
+                      "org": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      },
+                      "currentRole": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      },
+                      "track": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      },
+                      "experience": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      },
+                      "skills": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      }
+                    }
+                  },
                   "registrationOpensAt": {
                     "anyOf": [
                       {
@@ -1583,6 +1648,71 @@
                     "type": "integer",
                     "minimum": 1,
                     "maximum": 20
+                  },
+                  "logoUrl": {
+                    "anyOf": [
+                      {
+                        "type": "string"
+                      },
+                      {
+                        "type": "null"
+                      }
+                    ]
+                  },
+                  "bannerUrl": {
+                    "anyOf": [
+                      {
+                        "type": "string"
+                      },
+                      {
+                        "type": "null"
+                      }
+                    ]
+                  },
+                  "registrationFields": {
+                    "type": "object",
+                    "properties": {
+                      "org": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      },
+                      "currentRole": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      },
+                      "track": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      },
+                      "experience": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      },
+                      "skills": {
+                        "type": "string",
+                        "enum": [
+                          "required",
+                          "optional",
+                          "off"
+                        ]
+                      }
+                    }
                   },
                   "registrationOpensAt": {
                     "anyOf": [
@@ -2205,7 +2335,7 @@
                     ]
                   },
                   "currency": {
-                    "type": "string"
+                    "const": "USD"
                   },
                   "quantity": {
                     "type": "integer",
@@ -2322,7 +2452,7 @@
                     ]
                   },
                   "currency": {
-                    "type": "string"
+                    "const": "USD"
                   },
                   "quantity": {
                     "type": "integer",
@@ -6995,7 +7125,7 @@
                     ]
                   },
                   "currency": {
-                    "type": "string"
+                    "const": "USD"
                   },
                   "tags": {
                     "type": "array",
@@ -7112,7 +7242,7 @@
                     ]
                   },
                   "currency": {
-                    "type": "string"
+                    "const": "USD"
                   },
                   "tags": {
                     "type": "array",
